dist/miniflux/Service.miniflux.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: miniflux-app-miniflux-app-deployment-c8668c09
  type: ClusterIP
